fix overflow

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -151,6 +151,7 @@ label {
 	border: 0.5em solid var(--gray);
 	background-clip: content-box;	
 	font-family: georgia;
+	word-wrap: break-word;
 }
 
 .card:hover {
